Complete Serviceable Locations Plugin-CRUD,Location Pop Up with all stores,allow pincode

--- a/src/Plugins/Nbl.Plugin.Widgets.ServiceableStoreLocations/Nbl.Plugin.Widgets.ServiceableStoreLocations.csproj
+++ b/src/Plugins/Nbl.Plugin.Widgets.ServiceableStoreLocations/Nbl.Plugin.Widgets.ServiceableStoreLocations.csproj
@@ -25,6 +25,15 @@
     <None Update="plugin.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Views\Component\AllStoresView.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Views\Component\HeaderBtn.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Views\EditStorePincode.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\Configure.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
